# minigrep

./: Cargo.toml  README.txt  output.txt
src/: lib.rs  main.rs  search.rs  testing.rs
