[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
env = "*"
fs = "*"
regex = "1.5"


[lib]
name = "libs"
path = "src/lib.rs"

[rust]
#debug = true
#debuginfo-level = 2

[[bin]]
name = "minigrep"
path = "src/main.rs"
